# -BaseProgramming--Semestr-2

./: .gitignore
laboratory/lab1/: README.md
laboratory/lab1/source/: CMakeLists.txt  main.cpp
laboratory/lab1/source/inc/: AnimatedText.h  AnimatedText.hpp
laboratory/lab2/source/: CMakeLists.txt  README.md  main.cpp
laboratory/lab2/source/inc/: String.hpp
laboratory/lab2/source/src/: String.cpp
laboratory/lab3/source/: README.md  main.cpp
laboratory/lab4/: README.md  main.cpp
laboratory/lab5/: CMakeLists.txt  main.cpp
laboratory/lab6/: Logger.hpp  README.md  log.txt  main.cpp
laboratory/lab7/: CMakeLists.txt  main.cpp
laboratory/lab8/: main.cpp
practical/prc1/source/: README.md  main.cpp
practical/prc2/: main.cpp
practical/prc3/: CMakeLists.txt  README.md  main.cpp
practical/prc4/: CMakeLists.txt  README.md  config.txt  main.cpp
university/lab1/: mainwindow.cpp  mainwindow.h
university/lab2/: mainwindow.cpp
university/lab3/: mainwindow.cpp  mainwindow.h
